test/spec_vectors/simd_lane/fail/module_70.wat
(module (func (result i32) (i8x16.extract_lane_s 0 (f32.const 0.0))))